<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="650dp"
    android:background="@drawable/popup_background"
    android:layout_gravity="center">


    <EditText
        android:id="@+id/client_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/hint_client_name"

        style="@style/edit_text"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"


        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.1"/>


    <TextView
        android:id="@+id/edit_text_pick_session_date"

        android:layout_width="200dp"
        android:layout_height="wrap_content"

        style="@style/edit_text"

        android:hint="@string/hint_set_date"

        android:clickable="true"
        android:focusable="true"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"


        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.3"/>


    <TextView
        android:id="@+id/edit_text_pick_start_time"

        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:hint="@string/hint_set_start_time"

        style="@style/edit_text"

        android:clickable="true"
        android:focusable="true"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"


        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"/>


    <TextView
        android:id="@+id/edit_text_pick_end_time"

        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:hint="@string/hint_set_end_time"

        style="@style/edit_text"

        android:clickable="true"
        android:focusable="true"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"


        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.7"/>


    <Button
        android:id="@+id/addSession"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/add"

        style="@style/button_add"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"


        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.9"/>



</android.support.constraint.ConstraintLayout>