<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"

        android:text="@string/currency_text"

        android:textColor="#FFF"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintVertical_bias=".1"
        app:layout_constraintHorizontal_bias=".5"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/background_spinner"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintVertical_bias=".2"
        app:layout_constraintHorizontal_bias=".5">

        <Spinner
            android:id="@+id/spinner_currency"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:spinnerMode="dropdown"


            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <android.support.constraint.Guideline
            android:id="@+id/separator"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="vertical"

            app:layout_constraintGuide_percent=".85"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:src="@drawable/ic_keyboard_arrow_down_white_24dp"
            android:contentDescription="@string/spinner_arrow_description"

            app:layout_constraintLeft_toLeftOf="@id/separator"
            app:layout_constraintRight_toRightOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />



    </android.support.constraint.ConstraintLayout>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/earnings_text"

        android:textColor="#FFF"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintVertical_bias=".4"
        app:layout_constraintHorizontal_bias=".5"/>

    <EditText
        android:id="@+id/text_edit_pay"

        android:layout_width="200dp"
        android:layout_height="50dp"

        android:hint="@string/earnings_hint"

        android:importantForAutofill="no"

        style="@style/edit_text"

        android:inputType="numberDecimal"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintVertical_bias=".5"
        app:layout_constraintHorizontal_bias=".5" />

</android.support.constraint.ConstraintLayout>